manifests/06-runasnonroot/template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spsprunasnonroot
spec:
  crd:
    spec:
      names:
        kind: K8sPSPRunAsNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spsprunasnonroot
        
        violation[{"msg": msg}] {
          c := input.review.object.spec.containers[_]
          not has_run_as_non_root(c)
          msg := sprintf("Violacion ISO 27001: El contenedor %v debe configurarse con runAsNonRoot: true", [c.name])
        }
        
        has_run_as_non_root(c) {
          c.securityContext.runAsNonRoot == true
        }
        has_run_as_non_root(c) {
          input.review.object.spec.securityContext.runAsNonRoot == true
        }
